[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "ccflow-db"
authors = [
    {name = "1kbgz", email = "dev@1kbgz.com"},
]
description = "ccflow models for database access"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "0.1.0"
requires-python = ">=3.11"
keywords = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "ccflow>=0.6.10",
    "ccflow-etl>=0.1.1",
]

[project.optional-dependencies]
develop = [
    "build",
    "bump-my-version",
    "check-dist",
    "codespell",
    "hatchling",
    "mdformat",
    "mdformat-tables>=1",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
    "ty",
    "uv",
    "wheel",
]

[project.scripts]

[project.entry-points."hydra.lernaplugins"]
ccflow-db = "pkg:ccflow_db.config"

[project.urls]
Repository = "https://github.com/1kbgz/ccflow-db"
Homepage = "https://github.com/1kbgz/ccflow-db"

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
commit_args = "-s"

[[tool.bumpversion.files]]
filename = "ccflow_db/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.coverage.run]
branch = true
omit = [
    "ccflow_db/tests/integration/",
]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 50

[tool.hatch.build]
artifacts = []

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
packages = [
    "ccflow_db",
]

[tool.hatch.build.targets.wheel]
packages = [
    "ccflow_db",
]

[tool.hatch.build.targets.wheel.shared-data]

[tool.pytest.ini_options]
addopts = [
    "-vvv",
    "--junitxml=junit.xml",
]
testpaths = "ccflow_db/tests"
markers = [
    "integration: cross-package tests using only local synthetic fixtures",
    "e2e: complete local workflow tests using only synthetic fixtures and local storage",
    "live: tests requiring live provider credentials or external infrastructure",
]

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = [
    "I",
]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = [
    "ccflow_db",
]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",
    "F403",
]
